2009-03-23  Jonathan Pryor  <jpryor@novell.com>

	* UnixDriveInfo.cs: UnixDriveInfo.AvailableFreeSpace needs to return 
	  stat.f_bavail * stat.f_frsize, NOT f_bavail*f_bsize, as on some
	  platforms (Solaris) bsize is the preferred block I/O size, while
	  f_frsize is the *actual* filesystem block size.  Thus, to get proper
	  disk under Solaris, we need to s/f_bsize/f_frsize/g.

2009-02-20  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Add a pipecnt member to UnixSignal.SignalIinfo.
	  Patch thanks to tim.jenks@realtimeworlds.com.

2009-02-09  Jonathan Pryor  <jpryor@novell.com>

	* UnixGroupInfo.cs (GetMembers): Skip group members which aren't valid
	  users on the system (thus removing a possible exception).  Patch
	  thanks to Daniel Peñalba.

2009-01-08  Rodrigo Kumpera  <rkumpera@novell.com>

	* UnixSignal.cs: Check if realtime signal install failed with 
	EADDRINUSE due to the signal been used by outside of Mono.Posix.

2008-12-19  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Allow RealTimeSignums to be used in addition to
	  Signum, so that real time signals can be used.  Patch thanks to 
	  tim.jenks@realtimeworlds.com.

2008-11-04  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* UnixStream.cs: Do not check offset against int.MaxValue 
	(System.IO doesn't have it). Reviewed by Jonathan Pryor.
	Bug reported by Siro Blanco <siro.blanco@gmail.com>.

2008-11-03  Miguel de Icaza  <miguel@novell.com>

	* UnixClient.cs (Client): Make this property public when using the
	Mono 2.0 profile, based on a discussion with Vlad Hociota and Joe
	Shaw. 

2008-02-11  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Improve argument checking to match docs.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: UnixSignal.WaitAny() should have the same return type as
	  WaitHandle.WaitAny().  Oops.

2008-02-08  Jonathan Pryor  <jpryor@novell.com>

	* UnixSignal.cs: Modification of Info->count should be thread safe.
